--- a/modules/webconfig/nodejs/package.json
+++ b/modules/webconfig/nodejs/package.json
@@ -15,7 +15,6 @@
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "express": "~4.12.2",
-    "express-messages": "0.0.2",
     "express-session": "^1.11.1",
     "jade": "~1.9.2",
     "less-middleware": "1.0.x",
@@ -25,6 +24,10 @@
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^1.0.0",
+    "pg": "^4.4.0",
     "serve-favicon": "~2.2.0"
+  },
+  "devDependencies": {
+    "supertest": "^1.0.1"
   }
 }
