--- a/modules/webconfig/nodejs/package.json
+++ b/modules/webconfig/nodejs/package.json
@@ -28,6 +28,8 @@
     "serve-favicon": "~2.2.0"
   },
   "devDependencies": {
-    "supertest": "^1.0.1"
+    "supertest": "^1.0.1",
+    "mocha": "~2.0.1",
+    "should": "~3.1.3"
   }
 }
