--- a/modules/web-control-center/nodejs/package.json
+++ b/modules/web-control-center/nodejs/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.11.1",
     "jade": "~1.9.2",
     "less-middleware": "1.0.x",
+    "lodash": "3.10.0",
     "mongoose": "^4.0.2",
     "nconf": "^0.7.1",
     "passport": "^0.2.1",
