--- a/modules/web-control-center/nodejs/package.json
+++ b/modules/web-control-center/nodejs/package.json
@@ -27,7 +27,8 @@
     "passport-local-mongoose": "^1.0.0",
     "pg": "^4.4.0",
     "serve-favicon": "~2.2.0",
-    "util": "^0.10.3"
+    "util": "^0.10.3",
+    "ws": "~0.7.2"
   },
   "devDependencies": {
     "morgan": "~1.5.1",
