# IGNITE-1121 Set finalName = agent-${version}

--- a/modules/control-center-agent/pom.xml
+++ b/modules/control-center-agent/pom.xml
@@ -64,6 +64,8 @@
     </dependencies>
 
     <build>
+        <finalName>agent-${version}</finalName>
+
         <plugins>
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
