--- a/modules/web-control-center/src/main/js/package.json
+++ b/modules/web-control-center/src/main/js/package.json
@@ -30,10 +30,10 @@
     "express": "~4.12.2",
     "express-session": "^1.11.1",
     "jade": "~1.9.2",
-    "less-middleware": "1.0.x",
     "lodash": "3.10.0",
     "mongoose": "^4.0.2",
     "nconf": "^0.7.1",
+    "node-sass-middleware": "^0.9.0",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^1.0.0",
