--- a/modules/web-control-center/src/main/js/package.json
+++ b/modules/web-control-center/src/main/js/package.json
@@ -32,6 +32,7 @@
     "jade": "~1.9.2",
     "lodash": "3.10.0",
     "mongoose": "^4.0.2",
+    "mongoose-deep-populate": "1.1.0",
     "nconf": "^0.7.1",
     "node-sass-middleware": "^0.9.0",
     "passport": "^0.2.1",
