IGNITE-1155 Creating API on agent to request metadata.

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
         <module>modules/kafka</module>
         <module>modules/yarn</module>
         <module>modules/json</module>
+        <module>modules/schema-import-db</module>
     </modules>
 
     <profiles>
