IGNITE-1184 control-center-agent: User should be able to store JDBC drivers to specified folder

--- a/modules/control-center-agent/src/main/resources/default.config.properties
+++ b/modules/control-center-agent/src/main/resources/default.config.properties
@@ -19,6 +19,9 @@ serverURI=wss://localhost:3001
 # Default Ignite node server URI.
 nodeURI=http://localhost:8080
 
+# Folder with available JDBC drivers
+# driverFolder=/home/user/drivers
+
 # User's login (email) on Ignite Control Center
 # login=ivan.ivanov@gmail.com
 
