--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,6 @@
         <module>modules/kafka</module>
         <module>modules/yarn</module>
         <module>modules/json</module>
-        <module>modules/schema-import-db</module>
     </modules>
 
     <profiles>
@@ -635,6 +634,7 @@
             </activation>
             <modules>
                 <module>modules/schema-import</module>
+                <module>modules/schema-import-db</module>
             </modules>
             <build>
                 <plugins>
@@ -691,6 +691,7 @@
             </activation>
             <modules>
                 <module>modules/schema-import</module>
+                <module>modules/schema-import-db</module>
             </modules>
             <build>
                 <plugins>
@@ -736,6 +737,14 @@
                     </plugin>
                 </plugins>
             </build>
+        </profile>
+
+        <profile>
+            <id>control-center</id>
+            <modules>
+                <module>modules/control-center-agent</module>
+                <module>modules/schema-import-db</module>
+            </modules>
         </profile>
 
         <profile>
