IGNITE-843 Fixed maven build.

--- a/modules/control-center-agent/src/assembly/build.xml
+++ b/modules/control-center-agent/src/assembly/build.xml
@@ -26,7 +26,7 @@
             <directory>${project.build.directory}</directory>
             <outputDirectory>/</outputDirectory>
             <includes>
-                <include>agent-${version}.jar</include>
+                <include>agent-${project.version}.jar</include>
             </includes>
         </fileSet>
     </fileSets>
