--- a/modules/control-center-agent/pom.xml
+++ b/modules/control-center-agent/pom.xml
@@ -70,7 +70,7 @@
     </dependencies>
 
     <build>
-        <finalName>agent-${version}</finalName>
+        <finalName>agent-${project.version}</finalName>
 
         <plugins>
             <plugin>
