--- a/modules/control-center-web/src/main/js/package.json
+++ b/modules/control-center-web/src/main/js/package.json
@@ -37,6 +37,7 @@
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^1.0.0",
+    "nodemailer": "1.4.0",
     "serve-favicon": "~2.2.0",
     "ws": "~0.7.2"
   },
