--- a/modules/control-center-web/src/main/js/package.json
+++ b/modules/control-center-web/src/main/js/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "archiver": "^0.14.4",
     "body-parser": "~1.13.3",
+    "compression": "1.5.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^0.8.1",
     "cookie-parser": "~1.3.4",
